--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Project specific files to ignore
 *.xlsx
 *.ics
+config.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -140,3 +141,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+rootkey.csv
